# BuildCppDependency

./: README.md
Android/: Invoke-BuildDependencies.ps1  apriltag.ps1  basis.ps1  boost.ps1  build-common.ps1  build.ps1  c-ares.ps1  cgal.ps1  cmake-build.ps1  curl.ps1  draco.ps1  eigen.ps1  gdal.ps1  geos.ps1  giflib.ps1  gmp.sh  iconv.ps1  iconv.sh  lerc.ps1  libexpat.ps1  libjpeg.ps1  libpng.ps1  libtiff.ps1  libwebp.ps1  libxml2.ps1  mpfr.sh  nlohmann-json.ps1  opencv.ps1  openssl.ps1  openssl.sh  proj.ps1  sqlite.ps1  util-linux.sh  zlib.ps1  zstd.ps1
Source/minizip-1.3.1/: CMakeLists.txt
Ubuntu/: OpenBLAS.sh  OpenSSL.sh  SuiteSparse.sh  autotools-build.sh  aws-sdk-cpp.sh  boost.sh  build-common.sh  build-required.sh  build.sh  c-ares.sh  ceres-solver.sh  cmake-build.sh  cpp-httplib.sh  curl.sh  draco.sh  eigen.sh  extract-source.sh  faiss.sh  freetype.sh  gflags.sh  giflib.sh  glog.sh  gmp.sh  libjpeg.sh  libpng.sh  libsodium.sh  libtiff.sh  libzip.sh  magic_enum.sh  md4c.sh  mpfr.sh  nlohmann-json.sh  onnxruntime.sh  opencv.sh  openssl.sh  paho.mqtt.cpp.sh  sqlite.sh  tinyxml2.sh  uriparser.sh  zlib.sh
Windows/: .gitignore  BuildCppDependency.ps1  BuildEigen.ps1  BuildFreeType.ps1  BuildGifLib.ps1  BuildLibPng.ps1  BuildLibTIFF.ps1  BuildMiniZip.ps1  BuildOpenSceneGraph.ps1  BuildOsgQt.ps1  BuildOsgQt5.ps1  BuildRequired.ps1  BuildSQLite.ps1  BuildZLib.ps1  DownloadAndUnzip.ps1  FindVcVarsPath.ps1  OpenBLAS.ps1  OpenMVG.ps1  OpenSceneGraph.ps1  SARibbon.ps1  SuiteSparse.ps1  TBB.ps1  abseil-cpp.ps1  apriltag.ps1  basis.ps1  boost.ps1  build-common.ps1  (+45 more)
(+270 files in other folders)
